--- a/Resume.tex
+++ b/Resume.tex
@@ -62,8 +62,7 @@
 \begin{tabular*}{7in}{l@{\extracolsep{\fill}}r}
 	\textbf{\href{https://github.com/rishidewan33}{\LARGE Rishi Dewan}} & \href{mailto:rishidewan33@gmail.com}{rishidewan33@gmail.com}\\
 	{2704 Rio Grande St.\#512} & \href{https://github.com/rishidewan33}{https://github.com/rishidewan33} \\
-	{Austin, TX 78705} \\
-	{(281) 732-6108}
+	{Austin, TX 78705} & {Phone: 281-732-6108}\\
 	\end{tabular*}
 \\
 \vspace{0.1in}
@@ -72,19 +71,20 @@
 \resheading{Education}
 	\begin{itemize}
 		\item
-			\ressubheading{\href{http://www.utexas.edu}{The University of Texas at Austin}}{Austin, TX}{\href{http://www.cs.utexas.edu}{Bachelor of Science in Computer Science}}{Aug. 2006 -- May. 2011}%{GPA: 2.51/4.00}
+			\ressubheading{\href{http://www.utexas.edu}{The University of Texas at Austin}}{Austin, TX}{\href{http://www.cs.utexas.edu}{Bachelor of Science in Computer Science}}{Aug. 2006 -- May. 2011}%{GPA: 2.60/4.00}
 				{
 				\begin{itemize}
-					\resitem{\textbf{Relevant Courses}: \href{http://www.cs.utexas.edu/users/mckinley/352/}{Computer Systems Architecture}, \href{http://www.cs.utexas.edu/~dahlin/Classes/UGOS/index.html}{Introduction to Operating Systems}, \href{http://www.cs.utexas.edu/~plaxton/c/357/index.html}{Design and Analysis of Algorithms}, \href{http://www.cs.utexas.edu/~novak/cs315.html}{Algorithms and Data Structures}, \href{http://www.cs.utexas.edu/users/panni/cs346.html}{Cryptography}}
+					\resitem{\textbf{Relevant Courses}: \href{http://www.cs.utexas.edu/users/mckinley/352/}{Computer Systems Architecture}, \href{http://www.cs.utexas.edu/~dahlin/Classes/UGOS/index.html}{Introduction to Operating Systems}, \href{http://www.cs.utexas.edu/~plaxton/c/357/index.html}{Design and Analysis of Algorithms}, \href{http://www.cs.utexas.edu/~novak/cs315.html}{Algorithms and Data Structures}}
 				\end{itemize}
 				}
 	\end{itemize} % End Education list
 
 \resheading{Technical Skills}
 	\begin{description}
-		\item[Languages:] {C/C++, Java, Python, UML, MIPS Assembly, \LaTeX, XHTML, CSS, SQL}
+		\item[Language Experience:] {C/C++ (1 year), Java (4 years), Python (2 years)}
+		\item[Programming Exposure in:] {C\#.NET, ASP.NET, UML, \LaTeX, HTML, CSS, SQL}
 		\item[Computer and OS:] {Proficient in Ubuntu Linux, Windows 9x, XP, Vista, Mac OS X Snow Leopard}
-		\item[Software:]{\href{http://msdn.microsoft.com/en-us/library/ms950416.aspx}{MS Visual Studio}, \href{http://netbeans.org/}{Netbeans IDE}, \href{http://git-scm.com/}{git}, \href{http://www.realvnc.com/}{RealVNC}, \href{http://www.openoffice.org/}{OpenOffice (and Microsoft Office)}, SSH Secure Shell, \href{http://www.gnu.org/software/gdb/}{GNU Debugger}}
+		\item[Software:]{\href{http://msdn.microsoft.com/en-us/library/ms950416.aspx}{MS Visual Studio}, \href{http://netbeans.org/}{Netbeans IDE}, \href{http://git-scm.com/}{git}, \href{http://www.realvnc.com/}{RealVNC}, \href{http://www.openoffice.org/}{OpenOffice (and Microsoft Office)}, SSH Secure Shell, \href{http://www.gnu.org/software/gdb/}{GNU Debugger},VirtualBox}
 		\item[Programming Paradigms:]{Object-Oriented Programming, Multithreaded Programming, Design Patterns}
 	\end{description} % End Skills list
 
@@ -95,8 +95,8 @@
 				{
 				\begin{itemize}
 					{Implemented an abstraction of a hard disk in Java which incorporated}
-					{the use of transactions (which are analogous to database transactions and the ACID Properties) in order to apply reads/writes to multiple}
-					{sectors in the disk abstraction atomically (i.e. as a single operation).}
+					{the use of transactions in order to apply reads/writes to multiple}
+					{disk sectors in the disk abstraction atomically (i.e. as a single operation).}
 				\end{itemize}
 				}
 		\item
@@ -104,10 +104,10 @@
 				{
 				\begin{itemize}
 					{Developed a User-Level-Threads library in C which uses context manipulation}
-					{to allow users to use the library to create and destroy threads at a user level.}
-					{In addition, the library also allows threads to yield to other threads.}
+					{to allow users to use the library to create and organize control of threads at a user level.}
 				\end{itemize}
         			}
+\begin{comment}
         	\item
 			\projectheading{Proportional-Share Network Scheduler}
 				{
@@ -118,15 +118,16 @@
 					{learning to correctly use synchronization data types such as monitors.}
 				\end{itemize}
 				}
+\end{comment}
 		\item 
 			\projectheading{Advanced Encryption Standard Algorithm}
 				{
 				\begin{itemize}
 					{Wrote an implementation of the AES algorithm, which is a symmetric-key encryption}
-					{standard in both Java (128/256-bit) and Python (128/192/256-bit) and uses both the}
-					{Electronic Code Book and Chain Block Cipher modes of operation.}
+					{standard in both Java (128/256-bit) and Python (128/192/256-bit).}
 				\end{itemize}
 				}
+\begin{comment}
 		\item			
 			\projectheading{L1 Cache Simulator}
 				{
@@ -136,19 +137,17 @@
 					{of actual cache hardware, such as write backs, write allocations, and the LRU replacement algorithm.}
 				\end{itemize}
 				}
+\end{comment}
 		\item
 			\projectheading{SET Puzzle Game}
 				{
 				\begin{itemize}
-					{Implemented a basic GUI Python clone application of the puzzle card game SET \href{http://www.setgame.com}{(www.setgame.com)}.}
-					{The objective of this game is given a set of cards on the ``table'', pick 3 sets of cards whose attributes}
-					{are mutually exclusive to each other. This program was my introduction into GUI Programming using Python's GUI toolkit}
+					{Implemented a GUI Python clone application of the puzzle card game SET \href{http://www.setgame.com}{(www.setgame.com)}.}
+					{This program was an introduction into GUI Programming using Python's GUI toolkit}
 					{\textit{TKinter}.}
 				\end{itemize}
 				}
 	\end{itemize}  % End Experience list
-
-\pagebreak
 
 \resheading{Work Experience}
 	\begin{itemize}
@@ -165,7 +164,7 @@
 	    \workheading{University of Texas at Austin - Division of Housing and Food}{Night Supervisor}{Jan. 2009 - Mar. 2010}
 	      { \begin{itemize}
 	         \item{In charge of managing the safety and security of multiple thousands of residents located in the university dorms.}
-	         \item{Resolved general problems (i.e.  between resident advisors, dorm coordinators, and personnel in the housing department.)}
+		 \item{Resolved general problems (i.e. between resident advisors, dorm coordinators, and personnel in the housing department.)}
 	        \end{itemize}
 	      }
 	\end{itemize} %End Work Experience List
